--- a/client/src/containers/home/normal.css
+++ b/client/src/containers/home/normal.css
@@ -16,7 +16,6 @@
 
 .normal-content__input {
     width: 100%;
-    margin: -10rem 0 1rem;
 
     display: flex;
 }
@@ -31,7 +30,7 @@
     border-color: #ffffff;
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 17px;
+    font-size: 23px;
     line-height: 30px;
 
     letter-spacing: -0.017em;
@@ -71,16 +70,14 @@
     font-size: 60px;
     line-height: 90px;
     letter-spacing: -0.017em;
-
     filter: contrast();
 }
 
 /*ช่องว่างระหว่างThe number of กับปุ่ม Start*/
 .normal-content__start {
     width: 100%;
-    margin: 5rem 0 1rem;
-
     display: flex;
+    margin: -7rem 0 1rem;
 }
 
 .normal-content__start button {
@@ -134,6 +131,24 @@
     background: #E7B925;
     clip-path: ellipse(700px 1500px at right 800px)
 
+}
+
+.form-control {
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 20px;
+    min-width: 15em;
+    position: relative;
+    margin: 2em;
+    display: flex;
+    justify-content: space-between;
+    border: 2px solid;
+    border-radius: 0;
+    padding: 1em;
+    cursor: pointer;
+    left: 56%;
+    bottom: 15%;
+    
 }
 
 @media screen and (max-width: 1050px) {
