--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@500&display=swap');
 
 :root {
   --font-family: 'Poppins', sans-serif;
@@ -11,4 +12,7 @@
   --color-text: #81AFDD;
   --color-subtext: #FF8A71;
 }
+
+
+
 
