--- a/client/src/containers/result/vegetresult.css
+++ b/client/src/containers/result/vegetresult.css
@@ -76,7 +76,7 @@
 
 /*จัดวางตำแหน่งจานผัดไทย*/
 .vegetresult-image {
-    flex: 1;
+    width: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,6 +92,13 @@
     z-index: 0;
   }
 
+  .vegetresult-image-top img{
+    width: 800px;
+    height: 500px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px; ;
+  }
 
   /*จัดวางตำแหน่งพื้นหลังสีเหลือง*/
 .vegetresult-yellow {
@@ -100,7 +107,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: #E7B925;
     clip-path: ellipse(700px 1500px at right 800px)
 }
