--- a/client/src/containers/result/dietresult.css
+++ b/client/src/containers/result/dietresult.css
@@ -3,7 +3,7 @@
 }
 
 .dietresult-content {
-    width: 800px;
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -76,7 +76,7 @@
 
 /*จัดวางตำแหน่งจานผัดไทย*/
 .dietresult-image {
-    flex: 1;
+    width: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,13 +92,14 @@
     z-index: 0;
   }
 
-.vegetresult-image-top img{
+  .dietresult-image-top img{
     width: 800px;
     height: 500px;
     object-fit: cover;
     object-position: center;
     border-radius: 10px; ;
   }
+
   /*จัดวางตำแหน่งพื้นหลังสีเหลือง*/
 .dietresult-yellow {
     position: absolute;
