--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -1,4 +1,4 @@
-.bestseller-content__space {
+/*.bestseller-content__space {
     width: 100%;
     margin: 12rem 0 1rem;
 
@@ -42,5 +42,5 @@
     padding: 0 1rem;
 
     filter: contrast();
-}
+}*/
 
