--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -1,4 +1,4 @@
-/*.bestseller-content__space {
+.bestseller-content__space {
     width: 100%;
     margin: 12rem 0 1rem;
 
@@ -42,5 +42,20 @@
     padding: 0 1rem;
 
     filter: contrast();
-}*/
+}
 
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-content {
+  padding: 2px 16px;
+}
