--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -44,13 +44,13 @@
     filter: contrast();
 }
 
-.card {
+.newcard {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
 
-.card-image {
+.newcard_image {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -58,11 +58,11 @@
 
 
 /* On mouse-over, add a deeper shadow */
-.card:hover {
+.newcard:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 /* Add some padding inside the card container */
-.card-content {
+.newcard_content {
   padding: 2px 16px;
 }
