--- a/client/src/containers/home/home.css
+++ b/client/src/containers/home/home.css
@@ -1,4 +1,5 @@
 /*ตกแต่งGood food is the foundation of happiness.*/
+
 .home {
     display: flex;
 }
@@ -75,7 +76,7 @@
 
 /*จัดวางตำแหน่งจานผัดไทย*/
 .home-image {
-    flex: 1;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,7 +89,7 @@
     position: absolute;
     right: 0;
     top: -1;
-    width: 100%; 
+    width: 100vh; 
     z-index: 0;
   }
 
@@ -97,7 +98,7 @@
     padding-top: 0px; 
     padding-right: 20%; 
     padding-left: 27px;
-    width: 100%; 
+    width: 100vh; 
     z-index: 0;
   }
 
@@ -109,7 +110,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 160vh;
     background: #E7B925;
     clip-path: ellipse(700px 1500px at right 800px)
 }
