--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -1,3 +1,44 @@
+/*
+.scroll-container {
+  overflow: scroll;
+}
+
+.scroll-container::-webkit-scrollbar {
+  width: 0.25vw;
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color:#021d3c;
+}
+
+.scroll-container::-webkit-scrollbar-track {
+  background-color:white;
+}
+
+*/
+body {
+  height: 100%;
+  overflow-y:scroll;
+  width: 100%;
+  margin: 0 auto;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgba(238, 238, 238);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(189, 195, 199);
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+​
 .bestseller-content__space {
     width: 100%;
     margin: 12rem 0 1rem;
@@ -18,7 +59,13 @@
 }
 
 .button-is-success {
-  padding: 2rem 51.55rem;
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  
 }
 
 .button-is-success button{
