--- a/client/src/containers/home/diet.css
+++ b/client/src/containers/home/diet.css
@@ -120,7 +120,7 @@
     position: absolute;
     right: 0;
     top: -1;
-    width: 100%; 
+    width: 95vh; 
     z-index: 0;
   }
 
@@ -128,7 +128,7 @@
     padding-top: 40px; 
     padding-right: 20%; 
     padding-left: 10px;
-    width: 100%; 
+    width: 95vh; 
 }
 
 .diet-yellow {
@@ -137,7 +137,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 160vh;
     background: #E7B925;
     clip-path: ellipse(700px 1500px at right 800px)
 
