--- a/client/src/containers/home/veget.css
+++ b/client/src/containers/home/veget.css
@@ -119,7 +119,7 @@
     padding-top: 0px; 
     padding-right: 20%; 
     padding-left: 1px;
-    width: 100%; 
+    width: 80vh; 
     z-index: 0;
 }
 
@@ -129,7 +129,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 160vh;
     background: #E7B925;
     clip-path: ellipse(700px 1500px at right 800px)
 
