--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -43,7 +43,7 @@ body::-webkit-scrollbar-thumb {
 .button-is-success {
   margin: 0;
   position: absolute;
-  top: 100%;
+  top: 105%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -51,7 +51,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .button-is-success button{
-  flex: 0.6;
+    flex: 0.6;
     width: 200px;
     min-width: 50px;
     
@@ -88,10 +88,25 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  overflow-x: scroll;
   
 }
 
+.newcard::-webkit-scrollbar {
+  width: 12px;
+}
+
+.newcard::-webkit-scrollbar-track {
+  background-color: #042c54;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+.newcard::-webkit-scrollbar-thumb {
+  background-color: #032246;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
 .newcard_image {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
