--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -94,7 +94,13 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
+  transform: rotate(0deg) translate(0, 0);
+  transition-property: transform;
+  transition-duration: .3s;
+
+  display: flex;
+  flex-wrap: wrap;
   
 }
 
