--- a/client/src/containers/recommend/recommend.css
+++ b/client/src/containers/recommend/recommend.css
@@ -49,7 +49,7 @@ body::-webkit-scrollbar-thumb {
 .button-is-success {
   margin: 0;
   position: absolute;
-  top: 35%;
+  top: 50%;
   left: 75%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -57,20 +57,20 @@ body::-webkit-scrollbar-thumb {
 }
 
 .button-is-success button{
-    flex: 0.6;
-    width: 100px;
-    min-width: 50px;
-    
+    flex: 1;
+    width: 70px;
+    height: 70px;
     background-color: transparent;
-    border-radius: 50px;
+    display: block;
+    border-radius: 50%;
     border-color: #E7B925;
     background-color: #E7B925;
-    font-size: 15px;
+    font-size: 8vh;
     font-family: var(--font-family);
     font-weight: 700;
     line-height: 40px;
 
-    letter-spacing: -0.017em;
+    
     color: white;
     cursor: pointer;
     outline: none;
